--- a/data/authors/dominic.yaml
+++ b/data/authors/dominic.yaml
@@ -1,4 +1,6 @@
 nick: "dominic"
 name: "Dominic Truelen"
-pos: "CSI Development Commitee Intern 15-16"
+image:
+  profile: "dominic.jpg"
+pos: "CSI Development Commitee Member 15-16"
 bio: "Nothing is impossible, only things not yet possible."
