--- a/data/authors/francis.yaml
+++ b/data/authors/francis.yaml
@@ -1,5 +1,7 @@
 nick: "francis"
 name: "Francis dela Cruz"
-pos: "CSI Development Commitee Intern 15-16"
+image:
+  profile: "francis.jpg"
+pos: "CSI Development Commitee Member 15-16"
 bio: "nope, compsci"
 twitter: DEGABGED
