--- a/wercker.yml
+++ b/wercker.yml
@@ -7,7 +7,7 @@ build:
        tasks: deploy
     - arjen/hugo-build:
         disable_pygments: true
-        version: "HEAD"
+        version: "0.15"
 deploy:
   steps:
     - lukevivier/gh-pages@0.2.1:
