--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
   "private": true,
   "engines": {
-    "node": ">=0.10.0"
+    "node": "0.10.0"
   },
   "devDependencies": {
-    "del": "^2.0.2",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-cache": "^0.3.0",
-    "gulp-csso": "^1.0.1",
-    "gulp-htmlclean": "^2.6.4",
-    "gulp-if": "^2.0.0",
-    "gulp-jshint": "^1.11.2",
-    "gulp-livereload": "^3.8.1",
-    "gulp-load-plugins": "^1.0.0",
-    "gulp-minify-css": "^1.2.1",
-    "gulp-minify-html": "^1.0.4",
-    "gulp-plumber": "^1.0.1",
-    "gulp-shell": "^0.5.0",
-    "gulp-size": "^2.0.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-stylus": "^2.1.0",
-    "gulp-uglify": "^1.4.2",
-    "gulp-useref": "^1.3.0",
-    "jeet": "^6.1.2",
-    "jshint-stylish": "^2.0.1",
-    "prismjs": "^1.2.0",
-    "webpack": "^1.12.2",
-    "webpack-stream": "^2.1.1"
+    "del": "2.0.2",
+    "gulp": "3.9.0",
+    "gulp-autoprefixer": "3.1.0",
+    "gulp-cache": "0.3.0",
+    "gulp-csso": "1.0.1",
+    "gulp-htmlclean": "2.6.4",
+    "gulp-if": "2.0.0",
+    "gulp-jshint": "1.11.2",
+    "gulp-livereload": "3.8.1",
+    "gulp-load-plugins": "1.0.0",
+    "gulp-minify-css": "1.2.1",
+    "gulp-minify-html": "1.0.4",
+    "gulp-plumber": "1.0.1",
+    "gulp-shell": "0.5.0",
+    "gulp-size": "2.0.0",
+    "gulp-sourcemaps": "1.6.0",
+    "gulp-stylus": "2.1.0",
+    "gulp-uglify": "1.4.2",
+    "gulp-useref": "1.3.0",
+    "jeet": "6.1.2",
+    "jshint-stylish": "2.0.1",
+    "prismjs": "1.2.0",
+    "webpack": "1.12.2",
+    "webpack-stream": "2.1.1"
   },
   "dependencies": {}
 }
